ID、名称を統一。

--- a/TestingAssistGift/ModSettings.json
+++ b/TestingAssistGift/ModSettings.json
@@ -21,20 +21,20 @@
   // 値が null または定義されていない効果名の場合は、そのキャラクターは何も効果を発揮しません。
   "ApplyingEffectName": {
     // 1番目の味方キャラクターに適用する効果名
-    "Player1": "味方用2",
+    "Player1": "味方用1",
     // 2番目の味方キャラクターに適用する効果名
-    "Player2": "味方用1",
+    "Player2": "味方用2",
     // 3番目の味方キャラクターに適用する効果名
     "Player3": "味方用2",
     // 4番目の味方キャラクターに適用する効果名
-    "Player4": "味方用1",
+    "Player4": "味方用2",
     // 5番目の味方キャラクターに適用する効果名
     "Player5": "味方用2",
 
     // 1番目の敵キャラクターに適用する効果名
-    "Enemy1": "敵用1",
+    "Enemy1": null,
     // 2番目の敵キャラクターに適用する効果名
-    "Enemy2": "敵用1",
+    "Enemy2": null,
     // 3番目の敵キャラクターに適用する効果名
     "Enemy3": null,
     // 4番目の敵キャラクターに適用する効果名
@@ -54,59 +54,6 @@
       // 能力値に加算するボーナス
       "StatBonus": {
         // 体力の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
-        "HpAdder": 100,
-        // 混乱抵抗値の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
-        "BreakGageAdder": 50,
-        // 光の最大値増加量 (有効範囲: 0 ～ 5) (既定値: 0)
-        "PlayPointAdder": 2
-      },
-
-      // 毎幕回復するステータス
-      "RecoveringStatOnRoundStart": {
-        // 体力の回復量 (有効範囲: 0 ～ 1000) (既定値: 0)
-        "HpRecover": 10,
-        // 混乱抵抗値の回復量 (有効範囲: 0 ～ 1000) (既定値: 0)
-        "BreakRecover": 5,
-        // 光の回復量 (有効範囲: 0 ～ 10) (既定値: 0)
-        "PlayPoint": 1
-      },
-
-      // 毎幕付与する状態とその付与数 (有効範囲: 0 ～ 50) (既定値: 0)
-      "AddingBufsOnRoundStart": {
-        // パワー
-        "Strength": 2,
-        // 虚弱
-        "Weak": 0,
-        // 忍耐
-        "Endurance": 2,
-        // 武装解除
-        "Disarm": 0,
-        // クイック
-        "Quickness": 2,
-        // 束縛
-        "Binding": 0,
-        // 保護
-        "Protection": 1,
-        // 脆弱
-        "Vulnerable": 0,
-        // 混乱保護
-        "BreakProtection": 1,
-        // 火傷
-        "Burn": 0,
-        // 麻痺
-        "Paralysis": 0,
-        // 出血
-        "Bleeding": 0
-      }
-    },
-
-    {
-      // 効果名
-      "Name": "味方用2",
-
-      // 能力値に加算するボーナス
-      "StatBonus": {
-        // 体力の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
         "HpAdder": 50,
         // 混乱抵抗値の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
         "BreakGageAdder": 25,
@@ -121,7 +68,7 @@
         // 混乱抵抗値の回復量 (有効範囲: 0 ～ 1000) (既定値: 0)
         "BreakRecover": 2,
         // 光の回復量 (有効範囲: 0 ～ 10) (既定値: 0)
-        "PlayPoint": 1
+        "PlayPointRecover": 1
       },
 
       // 毎幕付与する状態とその付与数 (有効範囲: 0 ～ 50) (既定値: 0)
@@ -155,6 +102,59 @@
 
     {
       // 効果名
+      "Name": "味方用2",
+
+      // 能力値に加算するボーナス
+      "StatBonus": {
+        // 体力の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
+        "HpAdder": 10,
+        // 混乱抵抗値の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
+        "BreakGageAdder": 5,
+        // 光の最大値増加量 (有効範囲: 0 ～ 5) (既定値: 0)
+        "PlayPointAdder": 0
+      },
+
+      // 毎幕回復するステータス
+      "RecoveringStatOnRoundStart": {
+        // 体力の回復量 (有効範囲: 0 ～ 1000) (既定値: 0)
+        "HpRecover": 2,
+        // 混乱抵抗値の回復量 (有効範囲: 0 ～ 1000) (既定値: 0)
+        "BreakRecover": 2,
+        // 光の回復量 (有効範囲: 0 ～ 10) (既定値: 0)
+        "PlayPoint": 0
+      },
+
+      // 毎幕付与する状態とその付与数 (有効範囲: 0 ～ 50) (既定値: 0)
+      "AddingBufsOnRoundStart": {
+        // パワー
+        "Strength": 0,
+        // 虚弱
+        "Weak": 0,
+        // 忍耐
+        "Endurance": 0,
+        // 武装解除
+        "Disarm": 0,
+        // クイック
+        "Quickness": 0,
+        // 束縛
+        "Binding": 0,
+        // 保護
+        "Protection": 0,
+        // 脆弱
+        "Vulnerable": 0,
+        // 混乱保護
+        "BreakProtection": 0,
+        // 火傷
+        "Burn": 0,
+        // 麻痺
+        "Paralysis": 0,
+        // 出血
+        "Bleeding": 0
+      }
+    },
+
+    {
+      // 効果名
       "Name": "敵用1",
 
       // 能力値に加算するボーナス
@@ -162,7 +162,7 @@
         // 体力の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
         "HpAdder": 100,
         // 混乱抵抗値の最大値増加量 (有効範囲: 0 ～ 500) (既定値: 0)
-        "BreakGageAdder": 50
+        "BreakGageAdder": 0
       }
     }
   ]
