設定ファイルの名前をTestingAssistGift側に統一。

--- a/BookDropRateChanger/BookDropRateChanger.csproj
+++ b/BookDropRateChanger/BookDropRateChanger.csproj
@@ -69,7 +69,7 @@
     <Content Include="Info\jp\Info.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Settings.json">
+    <Content Include="ModSettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
